tests/errors/sem.type-mismatch.func-sig-param-type.or
main :: () -> void {
    T :: 5;
    (T) -> void;
};
